# RemindMeTauri

./: README.md  add_cpp_admin.bat  add_cpp_workload.bat  check_link.bat  check_msvc.bat  find_link.bat  find_vs.bat  implementation_plan.md  index.html  install_cpp.bat  install_gcc.bat  install_msvc_tools.bat  kill_port.bat  launch.bat  package-lock.json  package.json  run_tauri.bat  smart_install_cpp.bat
.github/workflows/: build.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Note.jsx
src/styles/: index.css
