[package]
name = "remind-me-tauri"
version = "0.1.0"
description = "Remind Me - Desktop Notes App"
authors = ["you"]
edition = "2021"

[lib]
name = "remind_me_tauri_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
